updating templates w new data-require #706

--- a/khan_templates/RegexpOne.html
+++ b/khan_templates/RegexpOne.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- adapted from exercises/division_3.html -->
-<html data-require="math graphie graphie-helpers-arithmetic">
+<html data-require="word-problems math subhints">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Regexp Template - Simple</title>
