--- a/khan_templates/MultipleChoiceWithLaTeXAndHint.html
+++ b/khan_templates/MultipleChoiceWithLaTeXAndHint.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="word-problems"> 
+<html data-require="word-problems math subhints">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Add-one Smoothing</title>
