--- a/khan_templates/RegexpTwo.html
+++ b/khan_templates/RegexpTwo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html data-require="word-problems math subhints">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Regexp Template - Simple</title>
