--- a/khan_templates/SimpleNumeric.html
+++ b/khan_templates/SimpleNumeric.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math">
+<html data-require="word-problems math subhints">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Numeric Template</title>
